--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </a>
                             <ul class="dropdown-menu"
                                 arialabelledby="navbarDropdown">
-                                <li><a href="#"
+                                <li><a href=""
                                     class="dropdown-item">Piochas</a> </li>
                                 <li><a href="#"
                                     class="dropdown-item">Placas</a> </li>                                                         
