--- a/n50secos.html
+++ b/n50secos.html
@@ -48,15 +48,17 @@
                                 arialabelledby="navbarDropdown">
                                 <li><a href="#"
                                     class="dropdown-item"></a> </li>
-                                <li><a href="#"
-                                    class="dropdown-item">Timbres para empresas</a> </li>                                                         
-                                <li><a href="#"
+                                <li><a href="n10empresas"
+                                    class="dropdown-item">Timbres para empresas</a> </li>  
+                                    <li><a href="n20bolsillo.html"
+                                        class="dropdown-item">Timbres portátiles</a> </li>    
+                                <li><a href="n30fechadores.html"
                                     class="dropdown-item">Fechadores y numeradores</a> </li> 
-                                <li><a href="#"
+                                <li><a href="n40medicos.html"
                                     class="dropdown-item">Timbres para médicos y profesionales</a> </li>
-                                <li><a href="#"
+                                <li><a href="n50secos.html"
                                     class="dropdown-item">Cuños secos / sellos de agua</a> </li>
-                            </ul>                    
+                            </ul>                     
                         </li>
                         <li class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle"
