--- a/p200piochas.html
+++ b/p200piochas.html
@@ -17,7 +17,7 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
      
- <title class="seccion-titulo">Timbrexpres / Trodat V0.1 </title>   
+ <title class="seccion-titulo">Timbrexpres </title>   
 </head>
 <body>
     <body>        
@@ -42,7 +42,7 @@
                                 data-bs-toggle="dropdown"
                                 aria-expanded="false"
                                 >
-                                    Timbres de bolsillo
+                                    Piochas y grabados láser
                             </a>
                             <ul class="dropdown-menu"
                                 arialabelledby="navbarDropdown">
@@ -111,44 +111,13 @@
             <div class="row g-3">
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_9511.jpg" alt="Timbre Trodat de bolsillo" class="card-img-top">
+                        <img src="assets/imgs/portada_piochas_01.jpg" alt="Piochas" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat Portátil 9511</h5>
+                            <h5 class="card-title">Piochas</h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_9511_9512.jpg" alt="Timbres Trodat de bolsillo" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat Portátil 9511 y 9512</h5>                      
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_9512.jpg" alt="Timbres Trodat de bolsillo 9512" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat Portátil 9512</h5>                            
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_9430.jpg" alt="Timbres Trodat de bolsillo 9430" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat Portátil 9430</h5>                            
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 text-center">
-                    <div class="card">                       
-                        <img src="assets/imgs/portada_trodat_9342.jpg" alt="Timbres Trodat de bolsillo 9342" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Timbre Trodat Portátil 9342</h5>                            
-                        </div>
-                    </div>
-                </div>
+              
             </div>
         </div> 
         <section id="contacto" class="contacto seccion-oscura">
