--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </a>
                             <ul class="dropdown-menu"
                                 arialabelledby="navbarDropdown">
-                                <li><a href=""
+                                <li><a href="p200piochas.html"
                                     class="dropdown-item">Piochas</a> </li>
                                 <li><a href="#"
                                     class="dropdown-item">Placas</a> </li>                                                         
@@ -80,7 +80,7 @@
                             </ul>                    
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link no-wrap" href="#"><span class="no-wrap">Piochas/placas </span></a>
+                            <a class="nav-link no-wrap" href="p200piochas.html"><span class="no-wrap">Piochas/placas </span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link no-wrap"  href="#">Insumos para fabricantes</a>
