--- a/n10empresas.html
+++ b/n10empresas.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <body>        
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container-xxl">
               <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
               <a href="#intro" class="navbar-brand">
