--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
                                         class="dropdown-item"></a> </li>
                                 </ul>                    
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link no-wrap" href="p200piochas.html"><span class="no-wrap">Piochas/placas </span></a>
-                            </li>
+                            
                             <li class="nav-item">
                                 <a class="nav-link no-wrap"  href="#">Insumos para fabricantes</a>
                             </li>
@@ -105,10 +103,9 @@
                 </div>
             </nav>
         </header> 
-        <h1 class="text-center seccion-titulo">Bienvenidos a Timbrexpres Chile / Especialistas en Trodat</h1>
+        <h1 class="text-center seccion-titulo">Bienvenidos a Timbrexpres/ Especialistas en Trodat en Chile</h1>
         <div class="container">
-            <div class="row g-3">
-                
+            <div class="row g-3">                
                 <div class="col-12 col-md-6 col-lg-4 text-center">
                     <div class="card">
                         <img src="assets/imgs/portada_trodat_4911.jpg" alt="Timbre Trodat 4911" class="card-img-top  img-fluid">
