--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             </li>
                             
                             <li class="nav-item">
-                                <a class="nav-link no-wrap"  href="#">Insumos para fabricantes</a>
+                                <a class="nav-link no-wrap"  href="p250insumos.html">Insumos para fabricantes</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link no-wrap"  href="#">Personalización</a>
