--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <a class="nav-link no-wrap"  href="p250insumos.html">Insumos para fabricantes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link no-wrap"  href="#">Personalización</a>
+                                <a class="nav-link no-wrap"  href="p300personalizacion.html">Personalización</a>
                             </li>
                             <li class="nav-item">                    
                                 <a class="nav-link d-md-none no-wrap" href="#contacto">Contacto</a>
