--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="container-xxl">
                 <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
                 <a href="#intro" class="navbar-brand">
-                    <span class="fw-bold text-secondary">Timbres - Grabados - Regalos
+                    <span class="fw-bold text-secondary">Timbres - Grabados - Regalos -
                     </span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -42,7 +42,7 @@
                                     data-bs-toggle="dropdown"
                                     aria-expanded="false"
                                     >
-                                        Timbres
+                                        Timbres - 
                                 </a>
                                 <ul class="dropdown-menu"
                                     arialabelledby="navbarDropdown">
