--- a/p250insumos.html
+++ b/p250insumos.html
@@ -17,7 +17,7 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
      
- <title class="seccion-titulo">Timbrexpres  </title>   
+ <title class="seccion-titulo">Timbrexpres - </title>   
 </head>
 <body>
     <body>        
