--- a/p300personalizacion.html
+++ b/p300personalizacion.html
@@ -103,6 +103,7 @@
             </div>
         </nav>
     </header> 
+    <section>
     <h1>Servicios de personalizacion</h1>
     <p>Personalizamos elementos de escritura como Lápices
         plumas, portaminas, libretas en diferentes materiales,
@@ -112,6 +113,7 @@
         Envía tu requerimiento y con gusto te asesoraremos
 
     </p>
+    </section>
     <!-- Pié de página (Footer) -->
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
         <img class="footer-logo" src="assets/imgs/logotex.png" alt="Logo del footer">
