--- a/p250insumos.html
+++ b/p250insumos.html
@@ -160,7 +160,7 @@
         </section>
         <!-- Pié de página (Footer) -->
         <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
-            <img class="footer-logo" src="assets/imgs/icono-blanco.svg" alt="Logo del footer">
+            <img class="footer-logo" src="assets/imgs/logotex.png" alt="Logo del footer">
             <p class="footer-texto text-center">Compartamos por diferentes medios</p>
             <div class = "iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
                 <a href="https://twitter.com/freecodecampES" target="_blank" rel="noopener noreferrer">
