--- a/indexhotfix.html
+++ b/indexhotfix.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing merge </title>
+    <title>Testing merge from rama1 to main</title>
 </head>
 <body>
     
