Correccion de n10empresas

--- a/n10empresas.html
+++ b/n10empresas.html
@@ -42,7 +42,7 @@
                                 data-bs-toggle="dropdown"
                                 aria-expanded="false"
                                 >
-                                    Timbres de para empresas
+                                    Timbres para empresas
                             </a>
                             <ul class="dropdown-menu"
                                 arialabelledby="navbarDropdown">
