--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <link href="assets/styles/styles.css" rel="stylesheet">            
         <!-- Iconos de Bootstrap -->
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+            <link rel="canonical" href="https://icons.getbootstrap.com/icons/whatsapp/"><script src="/assets/js/color-modes.js"></script>
         <!-- Google fonts -->
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
