--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <!-- Iconos de Bootstrap -->
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
             <link rel="canonical" href="https://icons.getbootstrap.com/icons/whatsapp/"><script src="/assets/js/color-modes.js"></script>
+        <!-- Font Awesome -->    
+            <script src="https://kit.fontawesome.com/4d2ace9430.js" crossorigin="anonymous"></script>
         <!-- Google fonts -->
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -340,8 +342,11 @@
                 
                 <a href="https://wa.me/56947623231?text=Bienvenido%20a%20nuestro%20chat%20en%20WHATSAPP" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-whatsapp"></i>
-                </a>               
-                
+                </a>  
+                <a href="https://wa.me/56947623231?text=Bienvenido%20a%20nuestro%20chat%20en%20WHATSAPP" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-square-whatsapp"></i>
+                </a>                    
+                <i class="fa-brands fa-square-whatsapp"></i>
                 <a href="https://www.instagram.com/freecodecamp" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-instagram"></i>
                 </a>
