--- a/index.html
+++ b/index.html
@@ -343,11 +343,9 @@
                 <a href="https://wa.me/56947623231?text=Bienvenido%20a%20nuestro%20chat%20en%20WHATSAPP" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-whatsapp"></i>
                 </a>  
-                <a href="https://wa.me/56947623231?text=Bienvenido%20a%20nuestro%20chat%20en%20WHATSAPP" target="_blank" rel="noopener noreferrer">
-                    <i class="fa-brands fa-square-whatsapp"></i>
-                </a>                    
+                              
                 <i class="fa-brands fa-square-whatsapp"></i>
-                <a href="https://www.instagram.com/freecodecamp" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.instagram.com/timbrexpres.cl/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-instagram"></i>
                 </a>
                 <a href="mailto:luisvelasquezt@pm.me" target="_blank" rel="noopener noreferrer">
