--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
             
-        <title class="seccion-titulo">Timbrexpres </title>        
+        <title class="seccion-titulo">Timbrexpres</title>        
     </head>
     <body> 
         <header>     
@@ -106,7 +106,7 @@
                 </div>
             </nav>
         </header> 
-        <h1 class="text-center seccion-titulo">Bienvenidos a Timbrexpres/ Especialistas en Trodat en Chile</h1>
+        <h1 class="text-center seccion-titulo">Aquí resolverás todos tus requerimientos de timbres de impresión y grabados en Santiago</h1>
         <div class="container">
             <div class="row g-3">                
                 <div class="col-12 col-md-6 col-lg-4 text-center">
@@ -337,7 +337,7 @@
         <!-- Pié de página (Footer) -->
         <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
             <img class="footer-logo" src="assets/imgs/logotex.png" alt="Logo del footer">
-            <p class="footer-texto text-center">Compartamos por diferentes medios</p>
+            <p class="footer-texto text-center">Comunica tus requerimientos</p>
             <div class = "iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
                 
                 <a href="https://wa.me/56947623231?text=Bienvenido%20a%20nuestro%20chat%20en%20WHATSAPP" target="_blank" rel="noopener noreferrer">
