--- a/n30fechadores.html
+++ b/n30fechadores.html
@@ -240,10 +240,14 @@
         <!-- Pié de página (Footer) -->
         <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
             <img class="footer-logo" src="assets/imgs/logotex.png" alt="Logo del footer">
-            <p class="footer-texto text-center">Compartamos por diferentes medios</p>
+            <p class="footer-texto text-center">Comunica tus requerimientos</p>
             <div class = "iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
                 
-                <a href="https://www.instagram.com/freecodecamp" target="_blank" rel="noopener noreferrer">
+                <a href="https://wa.me/56947623231?text=Bienvenido%20a%20nuestro%20chat%20en%20WHATSAPP" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-whatsapp"></i>                    
+                </a>                                
+                
+                <a href="https://www.instagram.com/timbrexpres.cl/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-instagram"></i>
                 </a>
                 <a href="mailto:luisvelasquezt@pm.me" target="_blank" rel="noopener noreferrer">
@@ -251,7 +255,7 @@
                 </a>
             </div>
             <div class="derechos-de-autor">
-                &#169; Miguelito y Junípero - Medellín / Santiago de Chile (2023) &#169;
+                &#169; Miguelito y Junípero - Medellín / Santiago de Chile (2024) &#169;
             </div>
         </footer>       
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
