--- a/index.html
+++ b/index.html
@@ -27,17 +27,19 @@
             <nav class="navbar navbar-expand-md navbar-light bg-light">
                 <div class="container-xxl">
                 <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
-                <a href="#intro" class="navbar-brand">
-                    <span class="fw-bold text-secondary">Timbres - Grabados - Regalos
-                    </span>
-                </a>
+                <!-- Text besides the logo
+                    <a href="#intro" class="navbar-brand">
+                       <span class="fw-bold text-secondary">Timbres - Grabados - Regalos
+                       </span>
+                    </a>
+                -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
                         data-bs-target="#main-nav" aria-controls="main-nav"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
-                    <ul class="navbar-nav">                 
+                    <ul class="navbar-nav">                
                         
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle"
@@ -82,8 +84,7 @@
                                     <li><a href="#"
                                         class="dropdown-item"></a> </li>
                                 </ul>                    
-                            </li>
-                            
+                            </li>                           
                             <li class="nav-item">
                                 <a class="nav-link no-wrap"  href="p250insumos.html">Insumos para fabricantes</a>
                             </li>
@@ -91,7 +92,7 @@
                                 <a class="nav-link no-wrap"  href="p300personalizacion.html">Personalización</a>
                             </li>
                             <li class="nav-item">                    
-                                <a class="nav-link d-md-none no-wrap" href="#contacto">Contacto</a>
+                                <a class="nav-link d-md-none no-wrap" href="p400contactohtml">Contacto</a>
                             </li>
                             <li class="nav-item ms-2 d-none d-md-inline">                    
                                 <a class="btn btn-secondary no-wrap" href="#contacto" >Comprar</a>
