Formulario de contacto

--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
                                 <a class="nav-link no-wrap"  href="p300personalizacion.html">Personalización</a>
                             </li>
                             <li class="nav-item">                    
-                                <a class="nav-link d-md-none no-wrap" href="p400contactohtml">Contacto</a>
+                                <a class="btn btn-secondary no-wrap" href="p400contactohtml" >Contacto</a>
                             </li>
-                            <li class="nav-item ms-2 d-none d-md-inline">                    
-                                <a class="btn btn-secondary no-wrap" href="#contacto" >Comprar</a>
-                            </li>
+                            <!--<li class="nav-item ms-2 d-none d-md-inline">                    
+                                    <a class="btn btn-secondary no-wrap" href="#contacto" >Comprar</a>
+                                </li>
+                            -->
                     </ul>                
                 </div>
                 <div id="contacto" class="d-flex d-md ms-5 text-light align-items-center border border-1 border-warning bg-primary">
