--- a/p400contacto.html
+++ b/p400contacto.html
@@ -121,8 +121,14 @@
             </div>
         </div> 
         -->
-        <!-- Name input -->
-    <div class="mb-3">
+    <!-- Wrapper container -->
+<div class="container py-4">
+
+    <!-- Bootstrap 5 starter form -->
+    <form id="contactForm">
+  
+      <!-- Name input -->
+      <div class="mb-3">
         <label class="form-label" for="name">Name</label>
         <input class="form-control" id="name" type="text" placeholder="Name" />
       </div>
@@ -145,6 +151,8 @@
       </div>
   
     </form>
+  
+  </div>
         <section id="contacto" class="contacto seccion-oscura">
             <div class="container">     
                 <div class="container text-center rectangulo d-flex justify-content-evenly ">
