--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
             
-        <title class="seccion-titulo">Timbrexpres</title>        
+        <title class="seccion-titulo"><span><bold>Timbrexpres 2024</bold></span></title>        
     </head>
     <body> 
         <header>     
@@ -103,7 +103,7 @@
                 <div id="contacto" class="d-flex d-md ms-5 text-light align-items-center border border-1 border-warning bg-primary">
                     <span id="direccion" class="mx-1 no-wrap bi bi-geo-alt-fill"> Luis Thayer Ojeda 073 Ofic. 706 - Providencia</span>
                     <i id="whatsapp" class="mx-1 no-wrap bi bi-whatsapp"> +56 9 68986998</i>
-                    <i id="email" class="mx-1 no-wrap bi bi-envelope"> ventas@timbrexpres.cl</i>
+                    <i id="email" class="mx-1 no-wrap bi bi-envelope">ventas@timbrexpres.cl</i>
                 </div>    
                 </div>
             </nav>
