Formulario de contacto

--- a/p400contacto.html
+++ b/p400contacto.html
@@ -129,27 +129,26 @@
   
       <!-- Name input -->
       <div class="mb-3">
-        <label class="form-label" for="name">Name</label>
-        <input class="form-control" id="name" type="text" placeholder="Name" />
+        <label class="form-label" for="name">Nombre y apellidos</label>
+        <input class="form-control" id="name" type="text" placeholder="Nombre y apellidos" />
       </div>
   
       <!-- Email address input -->
       <div class="mb-3">
-        <label class="form-label" for="emailAddress">Email Address</label>
-        <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" />
+        <label class="form-label" for="emailAddress">Dirección de email</label>
+        <input class="form-control" id="emailAddress" type="email" placeholder="Dirección de email" />
       </div>
   
       <!-- Message input -->
       <div class="mb-3">
-        <label class="form-label" for="message">Message</label>
-        <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;"></textarea>
+        <label class="form-label" for="message">Describa su requerimiento</label>
+        <textarea class="form-control" id="message" type="text" placeholder="Describa su requerimiento" style="height: 10rem;"></textarea>
       </div>
   
       <!-- Form submit button -->
       <div class="d-grid">
-        <button class="btn btn-primary btn-lg" type="submit">Submit</button>
-      </div>
-  
+        <button class="btn btn-primary btn-lg" type="submit">Enviar</button>
+      </div>  
     </form>
   
   </div>
