Contact form and menu order

--- a/index.html
+++ b/index.html
@@ -85,14 +85,15 @@
                                         class="dropdown-item"></a> </li>
                                 </ul>                    
                             </li>                           
-                            <li class="nav-item">
-                                <a class="nav-link no-wrap"  href="p250insumos.html">Insumos para fabricantes</a>
-                            </li>
+                            
                             <li class="nav-item">
                                 <a class="nav-link no-wrap"  href="p300personalizacion.html">Personalización</a>
                             </li>
                             <li class="nav-item">                    
                                 <a class="btn btn-secondary no-wrap" href="p400contacto.html" >Contacto</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link no-wrap"  href="p250insumos.html">Para fabricantes</a>
                             </li>
                             <!--<li class="nav-item ms-2 d-none d-md-inline">                    
                                     <a class="btn btn-secondary no-wrap" href="#contacto" >Comprar</a>
