--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                             Solicita tus timbres y servicios de grabado.
                         </div>
                         
-                        <div class = "iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+                        <div class = "iconos-redes-sociales d-flex flex-wrap align-items-s justify-content-evenly">
                 
                             <a href="https://wa.me/56947623231?text=Bienvenido%20a%20nuestro%20chat%20en%20WHATSAPP" target="_blank" rel="noopener noreferrer">
                                 <button>
