--- a/p400contacto.html
+++ b/p400contacto.html
@@ -132,6 +132,7 @@
       <div class="mb-3">
         <label class="form-label" for="message">Describa su requerimiento</label>
         <textarea class="form-control" id="message" type="text" placeholder="Describa su requerimiento" style="height: 10rem;" data-sb-validations="required"></textarea>
+        <div class="invalid-feedback" data-sb-feedback="message:required">Mensaje requerido.</div>
       </div>
   
       <!-- Form submit button -->
