--- a/p400contacto.html
+++ b/p400contacto.html
@@ -134,6 +134,16 @@
         <textarea class="form-control" id="message" type="text" placeholder="Describa su requerimiento" style="height: 10rem;" data-sb-validations="required"></textarea>
         <div class="invalid-feedback" data-sb-feedback="message:required">Mensaje requerido.</div>
       </div>
+
+      <!-- Form submissions success message -->
+    <div class="d-none" id="submitSuccessMessage">
+        <div class="text-center mb-3">Form submission successful!</div>
+      </div>
+  
+      <!-- Form submissions error message -->
+      <div class="d-none" id="submitErrorMessage">
+        <div class="text-center text-danger mb-3">Error sending message!</div>
+      </div>
   
       <!-- Form submit button -->
       <div class="d-grid">
