--- a/p300personalizacion.html
+++ b/p300personalizacion.html
@@ -21,7 +21,7 @@
     </head>
 <body>
     <header>     
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-primary">
             <div class="container-xxl">
             <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
             <a href="#intro" class="navbar-brand">
