--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
     <body> 
         <header>     
-            <nav class="navbar navbar-expand-md navbar-dark bg-primary">
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark text-white">
                 <div class="container-xxl">
                 <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
                 <!-- Text besides the logo
