--- a/p900cards.html
+++ b/p900cards.html
@@ -10,10 +10,14 @@
         <img src="assets/imgs/portada_trodat_4630.jpg" class="card-img-top" alt="4630">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <p class="card-text">This is some text within a card body..</p>
+          <a href="#" class="btn btn-primary .card-link">Go somewhere</a>
         </div>
     </div>
+
+    
+
+
     <div class="row">
         <div class="col-sm-6">
           <div class="card">
