--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
             </nav>
         </header> 
-        <h1 class="text-center seccion-titulo">Aquí resolverás todos tus requerimientos de timbres de impresión y grabados en Santiago</h1>
+        <h1 class="text-center seccion-titulo">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h1>
         <div class="container">
             <div class="row g-3">                
                 <div class="col-12 col-md-6 col-lg-4 text-center">
