--- a/p900cards.html
+++ b/p900cards.html
@@ -23,6 +23,12 @@
           <a href="#" class="card-link">Another link</a>
         </div>
     </div>
+    <div class="card" style="width: 18rem;">
+        <img src="assets/imgs/portada_trodat_seco.jpg" class="card-img-top" alt="Sello seco">
+        <div class="card-body">
+          <p class="card-text">Some quick text to build on the card title and make up the bulk of the card's content.</p>
+        </div>      
+    </div>
 
     
 
