--- a/p900cards.html
+++ b/p900cards.html
@@ -6,7 +6,7 @@
     <title>Cards</title>
 </head>
 <body>
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 6rem;">
         <img src="assets/imgs/portada_trodat_4630.jpg" class="card-img-top" alt="4630">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
@@ -14,16 +14,16 @@
           <a href="#" class="btn btn-primary .card-link">Go somewhere</a>
         </div>
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 6rem;">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Some quick example text to build on the card title.</p>
           <a href="#" class="card-link">Card link</a>
           <a href="#" class="card-link">Another link</a>
         </div>
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 6rem;">
         <img src="assets/imgs/portada_trodat_seco.jpg" class="card-img-top" alt="Sello seco">
         <div class="card-body">
           <p class="card-text">Some quick text to build on the card title and make up the bulk of the card's content.</p>
