More card tests

--- a/p900cards.html
+++ b/p900cards.html
@@ -10,11 +10,14 @@
         <img src="assets/imgs/portada_trodat_4630.jpg" class="card-img-top" alt="4630">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
           <p class="card-text">This is some text within a card body..</p>
           <a href="#" class="btn btn-primary .card-link">Go somewhere</a>
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a>
         </div>
     </div>
-    <div class="card" style="width: 6rem;">
+    <!--<div class="card" style="width: 6rem;">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -23,6 +26,7 @@
           <a href="#" class="card-link">Another link</a>
         </div>
     </div>
+    -->
     <div class="card" style="width: 6rem;">
         <img src="assets/imgs/portada_trodat_seco.jpg" class="card-img-top" alt="Sello seco">
         <div class="card-body">
