Flush list in cards

--- a/p900cards.html
+++ b/p900cards.html
@@ -15,6 +15,11 @@
           <a href="#" class="btn btn-primary .card-link">Go somewhere</a>
           <a href="#" class="card-link">Card link</a>
           <a href="#" class="card-link">Another link</a>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+          </ul>
         </div>
     </div>
     <!--<div class="card" style="width: 6rem;">
