--- a/p900cards.html
+++ b/p900cards.html
@@ -9,17 +9,20 @@
     <div class="card" style="width: 24rem;">
         <img src="assets/imgs/portada_trodat_4630.jpg" class="card-img-top" alt="4630">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">This is some text within a card body..</p>
-          <a href="#" class="btn btn-primary .card-link">Go somewhere</a>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <div class="card-header">
+            Featured
+          </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">An item</li>
             <li class="list-group-item">A second item</li>
             <li class="list-group-item">A third item</li>
           </ul>
+          <h5 class="card-title">Card title</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <p class="card-text">This is some text within a card body..</p>
+          <a href="#" class="btn btn-primary .card-link">Go somewhere</a>
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a>          
         </div>
     </div>
     <!--<div class="card" style="width: 6rem;">
