Tests without image

--- a/p900cards.html
+++ b/p900cards.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="card" style="width: 24rem;">
-        <img src="assets/imgs/portada_trodat_4630.jpg" class="card-img-top" alt="4630">
+        <!-- <img src="assets/imgs/portada_trodat_4630.jpg" class="card-img-top" alt="4630"> -->
         <div class="card-body">
           <div class="card-header">
             Featured
