--- a/p900cards.html
+++ b/p900cards.html
@@ -41,6 +41,13 @@
           <p class="card-text">Some quick text to build on the card title and make up the bulk of the card's content.</p>
         </div>      
     </div>
+    <div class="card" style="width: 18rem;">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+    </div>
 
     
 
