--- a/p900cards.html
+++ b/p900cards.html
@@ -48,6 +48,22 @@
         <li class="list-group-item">A third item</li>
       </ul>
     </div>
+    <div class="card" style="width: 18rem;">
+      <img src="assets/imgs/4911rosado.jpg" class="card-img-top" alt="4911r">
+      <div class="card-body">
+        <h5 class="card-title">4911 rosado</h5>
+        <p class="card-text">Timbre Trodat modelo 4911 color rosado.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Timbre </li>
+        <li class="list-group-item">Texto</li>
+        <li class="list-group-item">Color</li>
+      </ul>
+      <div class="card-body">
+        <a href="#" class="card-link">Enlace a precio</a>
+        <a href="#" class="card-link">Enlace a pedir</a>
+      </div>
+    </div>
 
     
 
