--- a/p900cards.html
+++ b/p900cards.html
@@ -49,7 +49,7 @@
       </ul>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/imgs/4911rosado.jpg" class="card-img-top" alt="4911r">
+      <img src="assets/imgs/portada_trodat_1117.jpg" class="card-img-top" alt="4911r">
       <div class="card-body">
         <h5 class="card-title">4911 rosado</h5>
         <p class="card-text">Timbre Trodat modelo 4911 color rosado.</p>
@@ -62,6 +62,17 @@
       <div class="card-body">
         <a href="#" class="card-link">Enlace a precio</a>
         <a href="#" class="card-link">Enlace a pedir</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">
+        Featured
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
 
