--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                                         class="dropdown-item">Timbres para médicos y profesionales</a> </li>
                                     <li><a href="n50secos.html"
                                         class="dropdown-item">Cuños secos / sellos de agua</a> </li>
+                                    <li><a href="p900cards.html"
+                                        class="dropdown-item">-c</a> </li>   
+                                    <li><a href="p910cardswithimages.html"
+                                        class="dropdown-item">-i</a> </li>    
                                 </ul>                    
                             </li>
                             <li class="nav-item dropdown">
