--- a/p910cardswithimages.html
+++ b/p910cardswithimages.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <div class="card mb-3">
-        <img src="assets/imgs/MITO01.jpeg" class="card-img-top" alt="MITO01">
+        <img src="assets/imgs/MITO01.jpeg" class="card-img-top" alt="MITO01" width="200">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Image caps</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Image caps</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
-        <img src="assets/imgs/MITO03.jpeg" class="card-img-bottom" alt="MITO03.">
+        <img src="assets/imgs/MITO03.jpeg" class="card-img-bottom" alt="MITO03." width="200">
       </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
