--- a/p910cardswithimages.html
+++ b/p910cardswithimages.html
@@ -10,18 +10,26 @@
     <div class="card mb-3">
         <img src="assets/imgs/MITO01.jpeg" class="card-img-top" alt="MITO01" width="200">
         <div class="card-body">
-          <h5 class="card-title">Image caps</h5>
+          <h5 class="card-title">Image caps top</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Image caps</h5>
+          <h5 class="card-title">Image caps bottom</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
         <img src="assets/imgs/MITO03.jpeg" class="card-img-bottom" alt="MITO03." width="200">
+      </div>
+      <div class="card bg-dark text-white">
+        <img src="assets/imgs/MITO02.jpeg" class="card-img" alt="Mito bella..." width="200">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Card Image Overly</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Last updated 3 mins ago</p>
+        </div>
       </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
