--- a/p910cardswithimages.html
+++ b/p910cardswithimages.html
@@ -35,7 +35,7 @@
       <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="..." class="img-fluid rounded-start" alt="...">
+            <img src="assets/imgs/MITO02.jpeg" class="img-fluid rounded-start" alt="Bella...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
