--- a/p910cardswithimages.html
+++ b/p910cardswithimages.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <div class="card mb-3 col-md-4">
+    <div class="card mb-3 ">
         <img src="assets/imgs/MITO01.jpeg" class="card-img-top" alt="MITO01" width="200">
         <div class="card-body">
           <h5 class="card-title">Image caps top</h5>
@@ -15,7 +15,7 @@
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
-      <div class="card col-md-4">
+      <div class="card ">
         <div class="card-body">
           <h5 class="card-title">Image caps bottom</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -23,7 +23,7 @@
         </div>
         <img src="assets/imgs/MITO03.jpeg" class="card-img-bottom" alt="MITO03." width="200">
       </div>
-      <div class="card bg-dark text-white col-md-4">
+      <div class="card bg-dark text-white ">
         <img src="assets/imgs/MITO02.jpeg" class="card-img" alt="Mito bella..." width="200">
         <div class="card-img-overlay">
           <h5 class="card-title">Card Image Overly</h5>
