--- a/p910cardswithimages.html
+++ b/p910cardswithimages.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="card mb-3 ">
-        <img src="assets/imgs/MITO01.jpeg" class="card-img-top" alt="MITO01" width="200">
+        <img src="assets/imgs/MITO01.jpeg" class="card-img-top" alt="MITO01" style="width:200px">
         <div class="card-body">
           <h5 class="card-title">Image caps top</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -21,10 +21,10 @@
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
-        <img src="assets/imgs/MITO03.jpeg" class="card-img-bottom" alt="MITO03." width="200">
+        <img src="assets/imgs/MITO03.jpeg" class="card-img-bottom" alt="MITO03." style="width:200px">
       </div>
       <div class="card bg-dark text-white ">
-        <img src="assets/imgs/MITO02.jpeg" class="card-img" alt="Mito bella..." width="200">
+        <img src="assets/imgs/MITO02.jpeg" class="card-img" alt="Mito bella..." style="width:200px">
         <div class="card-img-overlay">
           <h5 class="card-title">Card Image Overly</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
