--- a/n30fechadores.html
+++ b/n30fechadores.html
@@ -20,7 +20,7 @@
     <title class="seccion-titulo">Timbrexpres 2024 </title>   
     </head>
     <body>            
-        <nav class="navbar navbar-expand-md navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-md text-white" style="color:var(--bs-red)">
             <div class="container-xxl">
             <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
             <a href="#intro" class="navbar-brand">
