--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
     <body> 
         <header>     
-            <nav class="navbar navbar-expand-md text-white" style="color:var(--bs-cyan)">
+            <nav class="navbar navbar-expand-md text-white" style="color:var(--bs-red)">
                 <div class="container-xxl">
                 <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
                 <!-- Text besides the logo
