--- a/n10empresas.html
+++ b/n10empresas.html
@@ -1,25 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
     <head>
         <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-                rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-                crossorigin="anonymous">
-    <!-- My CSS -->           
-        <link href="assets/styles/styles.css" rel="stylesheet">            
-    <!-- Iconos de Bootstrap -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <!-- Google fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-        
-        <title class="seccion-titulo">Timbrexpres 2024</title>   
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap CSS -->
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+                    rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+                    crossorigin="anonymous">
+        <!-- My CSS -->           
+            <link href="assets/styles/styles.css" rel="stylesheet">            
+        <!-- Iconos de Bootstrap -->
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+            <link rel="canonical" href="https://icons.getbootstrap.com/icons/whatsapp/"><script src="/assets/js/color-modes.js"></script>
+        <!-- Font Awesome -->    
+            <script src="https://kit.fontawesome.com/4d2ace9430.js" crossorigin="anonymous"></script>
+        <!-- Google fonts -->
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+            
+        <title class="seccion-titulo fw-bold text-secondary">Timbrexpres 2024.1180</title>        
     </head>
-    <body>
+    <body> 
         <header>     
             <nav class="navbar navbar-expand-md ">
                 <div class="container-xxl">
