--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </head>
     <body> 
         <header>     
-            <nav class="navbar navbar-expand-md bg-dark text-white">
+            <nav class="navbar navbar-expand-md bg-dark text-light">
                 <div class="container-xxl">
                 <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
                 
