--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <title class="seccion-titulo fw-bold text-secondary">Timbrexpres 2024.1180</title>        
     </head>
     <body> 
-        <header>     
-            <nav class="navbar navbar-expand-md bg-dark text-light">
+        <header>     <!--<nav class="navbar navbar-expand-md bg-dark text-light"></nav>-->
+            <nav class="navbar navbar-expand-md">
                 <div class="container-xxl">
                 <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
                 
