--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <header>     <!--<nav class="navbar navbar-expand-md bg-dark text-light"></nav>-->
             <nav class="navbar navbar-expand-md">
                 <div class="container-xxl">
-                <a class="navbar-brand" href="#"> <img src="assets/imgs/logotex.png" alt="Logo Timbrexpres" > </a>
+                <a class="navbar-brand" href="#"> <img src="assets/imgs/LOGO PAGINA WEB 1.png" alt="Logo Timbrexpres" > </a>
                 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
                         data-bs-target="#main-nav" aria-controls="main-nav"
