--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
     <body> 
         <header>     <!--<nav class="navbar navbar-expand-md bg-dark text-light"></nav>-->
-            <nav class="navbar navbar-expand-md">
+            <nav class="navbar navbar-expand-md bg-dark text-light">
                 <div class="container-xxl">
                 <a class="navbar-brand" href="#"> <img src="assets/imgs/logtex01.png" alt="Logo Timbrexpres" > </a>
                 
