--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <title class="seccion-titulo fw-bold text-secondary">Timbrexpres 2024.1180</title>        
     </head>
     <body> 
-        <header>     <!--<nav class="navbar navbar-expand-md bg-dark text-light"></nav>-->
+        <header>     
             <nav class="navbar navbar-expand-md bg-dark text-light">
                 <div class="container-xxl">
                 <a class="navbar-brand" href="#"> <img src="assets/imgs/logtex01.png" alt="Logo Timbrexpres" > </a>
