Imagenes de personal tags

--- a/p200piochas.html
+++ b/p200piochas.html
@@ -116,8 +116,13 @@
                             <h5 class="card-title">Piochas</h5>
                         </div>
                     </div>
-                </div>
-              
+                    <div class="card">                       
+                        <img src="assets/imgs/PIOCHAS_LUIS.jpg" alt="PersonalTags" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Personal Tags</h5>
+                        </div>
+                    </div>
+                </div>              
             </div>
         </div> 
         <section id="contacto" class="contacto seccion-oscura">
