--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 <div class="text-center">
                     <!--<h2 class="text-center seccion-titulo">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h1><-->
                     <h2 class="display-6">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h2>    
+                    <p class="lead">Awesome leads</p>
                 </div>
                 <div class="row g-3">                
                     <div class="col-12 col-md-6 col-lg-4 text-center">
