More on text in products

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             <div class="container-lg"> <!-- Before container-->
                 <div class="text-center">
                     <!--<h2 class="text-center seccion-titulo">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h1><-->
-                    <h2 class="display-6">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h2>    
-                    <p class="lead">Awesome leads</p>
+                    <h2 class="display-6">Aquí encontrarás tus timbres de impresión y grabados en Santiago</h2>    
+                    <p class="lead text-muted">Sorprendentes ofertas</p>
                 </div>
                 <div class="row g-3">                
                     <div class="col-12 col-md-6 col-lg-4 text-center">
